--- a/config/resumes.properties
+++ b/config/resumes.properties
@@ -2,3 +2,4 @@ storage.dir=C:/Users/SnG78/IdeaProjects/BaseJava/resumes
 db.url=jdbc:postgresql://localhost:5433/resumes
 db.user=postgres
 db.password=postgres
+protected.uuid=11111111-1111-1111-1111-111111111111
